feat: Add delete methods
